# stonkcast

./: .gitignore  run.sh  stop.sh  warm.sh
backend/: .env.example  README.md  pyproject.toml
backend/data/: README.md  capitol_page_debug.html
backend/src/: api.py  backtest.py  baselines.py  cache.py  metrics.py  nova.py  phase1.py  phase2.py  pointintime.py  scoring.py  warm_cache.py
backend/src/fetch/: dump_capitol_trades_playwright.py  fetchCongressTrades.py  fetchNewsArticles.py  fetchSECFilings.py  fetchStockData.py
backend/tests/: conftest.py  test_backtest.py  test_baselines.py  test_cache.py  test_congress.py  test_fetch.py  test_integration.py  test_metrics.py  test_phase2.py  test_pointintime.py  test_scoring.py
frontend/: app.js  index.html  style.css
