[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "fastapi>=0.138.0",
    "lxml>=6.1.1",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
